# pomosite

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
pomosite/: __init__.py  config.py  gen.py  itemconfig.py  templating.py  translate.py  translation.py
sample/: site.py
tests/: __init__.py  test_config_validation.py  test_make_relative_url.py  test_multilingual.py  test_templating.py  test_url_for.py  translate-templates.bat
tests/content/test_multilingual/templates/: base.html  om-oss.html  script.php  start.html
tests/content/test_templating/templates/: p3.html
tests/data/test_templating/templates/: header.html  invalid-ref.html  p1.html  p2.html  rooted-url.html  special-page.html  t2.HTM
