[metadata]
name = pomosite
version = 0.0.1
author = Anders Kaplan
author_email = anders.kaplan@pomokado.se
description = Multi-lingual static site builder based on jinja templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anderskaplan/pomosite
project_urls =
    Bug Tracker = https://github.com/anderskaplan/pomosite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = pomosite
python_requires = >=3.6
install_requires =
    jinja2
    translate-toolkit

[pydocstyle]
match-dir=(pomosite|tests|sample)
